<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  android:orientation="vertical"
  tools:context=".Controller.AddNewMeeting">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MaReu.AppBarOverlay"
    app:layout_constraintBottom_toTopOf="@+id/label_autoComplete_room"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="spread_inside">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar_new"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentTop="true"
      android:layout_gravity="center_horizontal"
      android:background="?attr/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
      app:title="@string/add_new_meeting" />

  </com.google.android.material.appbar.AppBarLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/label_autoComplete_room"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim_1"
    android:hint="@string/label_room"
    app:layout_constraintBottom_toTopOf="@+id/label_subject"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
    app:startIconDrawable="@drawable/ic_location_on">

    <AutoCompleteTextView
      android:id="@+id/autoComplete_room"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:inputType="none"
      tools:ignore="LabelFor" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/label_subject"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim_1"
    android:hint="@string/label_subject"
    app:layout_constraintBottom_toTopOf="@+id/label_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_autoComplete_room"
    app:startIconDrawable="@drawable/ic_assignment_turned_in">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/subject"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/label_info"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim_1"
    android:hint="@string/label_date"
    android:inputType="none"
    app:layout_constraintBottom_toTopOf="@+id/label_participant"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_subject"
    app:startIconDrawable="@drawable/ic_more_time">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/white"
      android:focusable="false" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/label_participant"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim_1"
    android:hint="@string/label_email"
    app:endIconMode="custom"
    app:layout_constraintBottom_toTopOf="@+id/addMeeting"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_info"
    app:startIconDrawable="@drawable/ic_people">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/participant"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:maxLines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/addMeeting"
    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dim_1"
    android:text="@string/update"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/label_participant" />

</androidx.constraintlayout.widget.ConstraintLayout>

