<resources>
  <!-- String for Application && MainActivity-->
  <string name="app_name">Ma réu</string>
  <string name="add_new_meeting">Add New Meeting</string>
  <string name="action_settings">Settings</string>
  <!-- contentDescription -->
  <string name="toolbar">Container Toolbar</string>
  <string name="fab_add">Lunch AddNewMeetingActivity</string>
  <!-- Menu on Toolbar -->
  <string name="btn_filter">Filter</string>

  <!-- AddNewMeetingComposent -->
  <string name="label_subject">Subject of Meeting</string>
  <string name="label_email">Participants email</string>
  <string name="label_date">Date and Hour of Meeting</string>
  <string name="label_room">Meeting Room</string>
  <string name="button_date">Select Date</string>
  <string name="update">Creation</string>

  <!-- FilterDialogueFragmentComponent -->
  <string name="label_result">Search by</string>
  <string name="label_filter_room">Choose Room</string>
  <string name="button_to_date">Select Date</string>

  <!-- Meeting_ItemComponent -->
  <!-- contentDescription -->
  <string name="contentDescription" />


  <!-- Meeting Item -->
  <string name="image"> "Image" </string>
  <string name="trash"> "Trash" </string>

</resources>