...
      app:popupTheme="@style/Theme.MaReu.PopupOverlay"
      app:title="@string/app_name" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/myRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
    tools:listitem="@layout/meeting_item" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:contentDescription="@string/fab_add"
    android:src="@drawable/ic_add"

...
