<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amine.mareu.MainActivity">
    <item
        android:id="@+id/button_menu"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/btn_filter"
        app:showAsAction="ifRoom" >
    </item>
</menu>
