package com.amine.mareu;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withParent;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

  @Rule
  public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

  @Test
  public void mainActivityTest() {
    ViewInteraction floatingActionButton = onView(
        allOf(withId(R.id.fab), withContentDescription("Lunch AddNewMeetingActivity"),
            childAtPosition(
                childAtPosition(
                    withId(android.R.id.content),
                    0),
                2),
            isDisplayed()));
    floatingActionButton.perform(click());

    ViewInteraction textInputEditText = onView(
        allOf(withId(R.id.participant),
            childAtPosition(
                childAtPosition(
                    withId(R.id.label_participant),
                    0),
                0),
            isDisplayed()));
    textInputEditText.perform(replaceText("amine91480@hotmail.fr"), closeSoftKeyboard());

    ViewInteraction textInputEditText2 = onView(
        allOf(withId(R.id.participant), withText("amine91480@hotmail.fr"),
            childAtPosition(
                childAtPosition(
                    withId(R.id.label_participant),
                    0),
                0),
            isDisplayed()));
    textInputEditText2.perform(click());

    ViewInteraction textInputEditText3 = onView(
        allOf(withId(R.id.participant),
            childAtPosition(
                childAtPosition(
                    withId(R.id.label_participant),
                    0),
                0),
            isDisplayed()));
    textInputEditText3.perform(click());

    pressBack();

    ViewInteraction imageButton = onView(
        allOf(withId(R.id.text_input_end_icon),
            withParent(withParent(IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class))),
            isDisplayed()));
    imageButton.check(matches(isDisplayed()));
  }

  public static Matcher<View> childAtPosition(
      final Matcher<View> parentMatcher, final int position) {

    return new TypeSafeMatcher<View>() {
      @Override
      public void describeTo(Description description) {
        description.appendText("Child at position " + position + " in parent ");
        parentMatcher.describeTo(description);
      }

      @Override
      public boolean matchesSafely(View view) {
        ViewParent parent = view.getParent();
        return parent instanceof ViewGroup && parentMatcher.matches(parent)
            && view.equals((( ViewGroup ) parent).getChildAt(position));
      }
    };
  }
}
